--- a/Code/Regressors-LinearRegression.ipynb
+++ b/Code/Regressors-LinearRegression.ipynb
@@ -77,22 +77,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "8f95989f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
     "# 1. Separate features and target\n",
     "X = data.drop(columns=['star_rating'])\n",
     "y = data['star_rating']\n",
     "\n",
-    "# 2. Train-test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# 3. Scale features\n",
+    "# 2. Scale features\n",
     "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n"
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# 3. Train-test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n"
    ]
   },
   {
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "bb64b032",
    "metadata": {},
    "outputs": [
@@ -124,10 +126,10 @@
     "\n",
     "# 4. Train Linear Regression model\n",
     "model = LinearRegression()\n",
-    "model.fit(X_train_scaled, y_train)\n",
+    "model.fit(X_train, y_train)\n",
     "\n",
     "# 5. Predictions\n",
-    "y_pred = model.predict(X_test_scaled)\n",
+    "y_pred = model.predict(X_test)\n",
     "\n",
     "# 6. Evaluation\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
@@ -139,9 +141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "6b02aff6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
