--- a/Code/Clustering-HC.ipynb
+++ b/Code/Clustering-HC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "b27946de",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "c14047d4",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "56c256df",
    "metadata": {},
    "outputs": [],
@@ -90,8 +90,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eaa12303",
+   "metadata": {},
+   "source": [
+    "## Hierarchical Clustering"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "4cd57bfd",
    "metadata": {},
    "outputs": [
